--- a/config.toml
+++ b/config.toml
@@ -6,3 +6,23 @@ theme = "monkey-theme"
 [markup]
   [markup.highlight]
     style = "dracula"
+
+[menu]
+    [[menu.main]]
+        identifier  = "home"
+        name        = "Home"
+        pre        = ""
+        url         = "/"
+        weight     = 1
+    [[menu.main]]
+        identifier  = "about"
+        name        = "About"
+        pre        = ""
+        url         = "/about"
+        weight     = 2
+    [[menu.main]]
+        identifier  = "contact"
+        name        = "Contact"
+        pre        = ""
+        url         = "/contact"
+        weight     = 3
