--- a/config.toml
+++ b/config.toml
@@ -2,27 +2,39 @@ baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "Loris.space"
 theme = "monkey-theme"
+Paginate = 2
 
 [markup]
-  [markup.highlight]
-    style = "dracula"
+
+[markup.highlight]
+style = "dracula"
 
 [menu]
-    [[menu.main]]
-        identifier  = "home"
-        name        = "Home"
-        pre        = ""
-        url         = "/"
-        weight     = 1
-    [[menu.main]]
-        identifier  = "about"
-        name        = "About"
-        pre        = ""
-        url         = "/about"
-        weight     = 2
-    [[menu.main]]
-        identifier  = "contact"
-        name        = "Contact"
-        pre        = ""
-        url         = "/contact"
-        weight     = 3
+
+[[menu.main]]
+identifier = "home"
+name = "Home"
+pre = ""
+url = "/"
+weight = 1
+
+[[menu.main]]
+identifier = "posts"
+name = "Posts"
+pre = ""
+url = "/posts"
+weight = 2
+
+[[menu.main]]
+identifier = "about"
+name = "About"
+pre = ""
+url = "/about"
+weight = 3
+
+[[menu.main]]
+identifier = "contact"
+name = "Contact"
+pre = ""
+url = "/contact"
+weight = 4
